di + services  + http client

--- a/src/app/videos/search/search.component.html
+++ b/src/app/videos/search/search.component.html
@@ -1,3 +1,18 @@
-<p>
-  search works!
+
+<form class="form-inline" (ngSubmit)="onSearch()" #searchForm="ngForm">
+  <div class="form-group mx-sm-3">
+    <input [ngModel]="query" (ngModelChange)="query = $event" required  name="query" type="text" class="form-control" placeholder="Szukaj na youtube">
+  </div>
+  <button type="submit" class="btn btn-primary"  [disabled]="!searchForm.form.valid">Szukaj</button>
+</form>
+<p (click)="showList = !showList">
+  Szukam: {{query}}
 </p>
+<pre >
+  OBSERVABLE:
+  {{response$ | async  | json}}
+</pre>
+<pre>
+  NORMAL:
+  {{response | json}}
+</pre>
