--- a/src/app/videos/search/search.component.html
+++ b/src/app/videos/search/search.component.html
@@ -11,8 +11,15 @@
 <pre >
   OBSERVABLE:
   {{response$ | async  | json}}
+
 </pre>
-<pre>
+
+<!-- <img src="{{video | thumb:'small'}}" alt=""> -->
+
+<!-- <app-thumb [item]="video" size="small"></app-thumb> -->
+
+<!-- {{video.getThumb('small')}} -->
+<!-- <pre>
   NORMAL:
   {{response | json}}
-</pre>
+</pre> -->
