music module - artist routing

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -7,6 +7,9 @@
     <li class="nav-item" routerLinkActive="active">
       <a class="nav-link" [routerLink]="['videos']">Videos</a>
     </li>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" [routerLink]="['music']">Music</a>
+    </li>
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav">
