--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -5,6 +5,9 @@
       <a class="nav-link" routerLink="">Home</a>
     </li>
     <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="rxjs">rxjs</a>
+    </li>
+    <li class="nav-item" routerLinkActive="active">
       <a class="nav-link" [routerLink]="['videos']">Videos</a>
     </li>
     <li class="nav-item" routerLinkActive="active">
