--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -10,4 +10,4 @@
 </div>
 
 
-<app-map [coords]="title" (mapClick)="onMapClick($event)" ></app-map>
+<app-map [coords]="coords" (mapClick)="onMapClick($event)" ></app-map>
