--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -10,4 +10,6 @@
 </div>
 
 
-<app-map [coords]="coords" (mapClick)="onMapClick($event)" ></app-map>
+<!-- <app-map [coords]="coords" (mapClick)="onMapClick($event)" ></app-map> -->
+
+<!-- <app-map [coords]="coords2" (mapClick)="coords2 = $event" ></app-map> -->
