--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -16,7 +16,7 @@
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav">
-      <button class="btn btn-default nav-link">Login</button>
+      <button class="btn btn-default nav-link" appAuth>Login</button>
     </li>
   </ul>
 
