--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -25,7 +25,7 @@
           [logout]
         </button>
 
-        <button class="nav-link" appHasRole="['admin']" >
+        <button class="nav-link" *appHasRole="['admin']" >
           [admin]
         </button>
 
