--- a/src/app/music/artist-view/artist-view.component.html
+++ b/src/app/music/artist-view/artist-view.component.html
@@ -29,6 +29,6 @@
 
 </ng-container>
 
-<div *ngFor="let artist of artists$ | async">
+<!-- <div *ngFor="let artist of artists$ | async">
     <a [routerLink]="['view', artist.id]" routerLinkActive="active">{{artist.name}}</a>
-</div>
+</div> -->
